# md2json

./: Earthfile  Makefile  README.md  go.mod  go.sum  main.go
archive/hugo/: Makefile  README.md
archive/markdown-to-json/: Earthfile  Makefile  README.md  pyproject.toml
data/: test.md
data/blips/languags_and_frameworks/: single-spa.md
