[tool.poetry]
name = "Blip Creator"
version = "0.1.0"
description = "Creating JSON blips out of Markdown blips"
authors = ["Matthias Scholz <matthias.scholz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
markdown-to-json = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
